fix sidebar overflow when screen height is too small and dashboard width is too small

--- a/Source/frontend/src/index.css
+++ b/Source/frontend/src/index.css
@@ -22,3 +22,6 @@ code {
 .ant-form-item-explain{
   color:red !important;
 }
+.ps-sidebar-container{
+  overflow-y:overlay !important
+}
